services/gatus/resources/gatus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: ghcr.io/twin/gatus:v5.7.0
          name: gatus
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: data-volume
              mountPath: /data
            - name: config-map
              mountPath: /config/config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
        - name: config-map
          configMap:
            name: config

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: service
      port:
        name: web
  tls:
    - hosts:
        - gatus

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-ingress
  annotations:
    tailscale.com/funnel: 'true'
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: service
      port:
        name: web
  tls:
    - hosts:
        - status
